welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:19: error: not found: value faireMotif
  faireMotif(Color.RED)
  ^PatternPicture:20: error: not found: value faireMotif
  faireMotif(Color.BLUE)
  ^PatternPicture:21: error: not found: value faireMotif
  faireMotif(Color.YELLOW)
  ^PatternPicture:22: error: not found: value faireMotif
  faireMotif(Color.GREEN)
  ^